--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "css-shortcut": "^1.2.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
